--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,20 @@
 {
   "name": "stratviewbackend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "nodemon": "nodemon --exec node index.js --harmony",
-    "dev": "node index.js --harmony"
-  },
-  "author": "",
-  "license": "ISC",
+  "description": "Live 2D demo viewer for CS:GO",
+  "main": "build/index.js",
+  "author": "felipeac",
+  "license": "GPLv3",
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
     "demofile": "^0.2.11",
-    "nodejs-websocket": "^1.7.0",
-    "nodemon": "^1.11.0"
+    "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^6.0.46",
+    "@types/ws": "0.0.35",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.5.2",
+    "gulp-typescript": "^3.1.2",
+    "typescript": "^2.0.7"
   }
 }
